<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">The Donor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="act_admin_main_profile">Profile</string>
    <string name="act_admin_main_request">Request</string>
    <string name="act_admin_main_donation">Donations</string>
    <string name="act_admin_main_history">History</string>
    <string name="act_admin_main_notification">Notifications</string>
    <string name="act_admin_profile_name">Name</string>
    <string name="act_admin_profile_mobile">Mobile</string>
    <string name="act_admin_profile_email">Email</string>
    <string name="act_admin_profile_Address">Address</string>
    <string name="act_admin_request_name">Name</string>
    <string name="act_admin_request_mobile">Mobile</string>
    <string name="act_admin_request_email">Email</string>
    <string name="act_admin_request_city">City</string>
    <string name="act_admin_request_submit">Submit</string>
    <string name="act_admin_request_descc">Provide Description for your item</string>
    <string name="act_admin_request_name_hint">USER NAME</string>
    <string name="act_home_Daily">Daily Ngo\'s Requirement</string>
    <string name="act_home_Today">Today\'s Top Donations</string>
    <string name="act_home_ourpartner">Our Ngo Partners</string>
    <string name="act_home_showall">Show All</string>
    <string name="frag_add_but_first_book">BOOK</string>
    <string name="frag_add_but_first_clothes">CLOTHES</string>
    <string name="frag_add_but_first_food">FOOD</string>
    <string name="frag_add_but_first_close">CLOSE</string>
    <string name="submit">SUBMIT</string>
    <string name="frag_dona_pic">Take Picture</string>
    <string name="login">Login</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="Register">Register</string>
    <string name="ngo_search">NGO Search</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="account_detail">Account Details</string>
    <string name="REQUIREMENTS">REQUIREMENTS</string>
    <string name="Confirm">Confirm</string>
    <string name="Posted_On">Posted On</string>
    <string name="Received_By">Received By-:</string>
    <string name="Ngo_Details">Ngo Details</string>
    <string name="OK">OK</string>
    <string name="CANCEL">CANCEL</string>
    <string name="perrmisionformusre_per">Click OK only if you can donate the item</string>
    <string name="View">View</string>
    <string name="Description">Description</string>
    <string name="recy_admin_loc_lay_desc_detail">The Description of the item which has been posted</string>
    <string name="Donated_By">Donated By -:</string>
    <string name="rec_admin_noti_desc_detail">The Description of the item which has been posted</string>
    <string name="Accept">Accept</string>
    <string name="reccc_user_dash_desc_detail">The Description of the item which has been posted</string>
    <string name="Undo">Undo</string>
</resources>
